[package]
name = "wasm-test"
version = "0.1.0"
authors = ["Karan Nehra <karanehra@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.56"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
libmath = "0.2.1"